# cbpa

./: .coveragerc  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: publish.yaml
cbpa/: __init__.py  gunicorn_config.py  main.py  server.py
cbpa/routers/: buy.py  health.py
cbpa/schemas/: account.py  alert.py  api.py  buy.py  config.py  currency.py  health.py
cbpa/services/: account.py  buy.py  config.py  discord.py
coinbasepro_scheduler/: __init__.py  logger.py  main.py
coinbasepro_scheduler/schemas/: account.py  alert.py  buy.py  config.py  currency.py  scheduler.py
coinbasepro_scheduler/services/: account.py  alert.py  buy.py  config.py  scheduler.py
examples/: cbpa-no-alerts.yaml  cbpa-trigger-deposit.yaml  cbpa-trigger-over-limit.yaml  cbpa.yaml  coinbasepro-scheduler-daily-discord.yaml  coinbasepro-scheduler-daily.yaml  coinbasepro-scheduler-seconds.yaml  coinbasepro-scheduler-weekly.yaml
scripts/: docker-build.sh  docker-push.sh  docker-run-server.sh  docker-run.sh  format.sh  gcloud-run-deploy.sh  lint.sh  test.sh
tests/: conftest.py  mocks.py  test_buy.py  test_main.py  test_run.py  test_version.py
