[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cbpa"
authors = [{name = "Anthony Corletti", email = "anthcor@gmail.com"}]
dynamic = ["version", "description"]
requires-python = ">=3.9.6"
dependencies = [
    "pydantic==1.9.0",
    "coinbasepro==0.3.0",
    "PyYaml==6.0",
    "discord==1.7.3"
]

[project.optional-dependencies]
test = [
    "pytest==6.2.5",
    "mypy==0.910",
    "coverage==6.1.1",
    "pytest-cov==3.0.0",
]
dev = [
    "flake8==3.9.2",
    "black==21.10b0",
    "isort==5.9.3",
    "autoflake==1.4",
    "flake8-docstrings==1.6.0",
    "types-PyYAML==6.0"
]

[tool.isort]
profile = "black"

[project.urls]
Documentation = "https://www.github.com/anthonycorletti/cbpa"
